@@ -1,5 +1,5 @@
 /*
-    Copyright 2008-2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2008-2011, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -13,11 +13,10 @@
 
 
 #include "fost-inet.hpp"
+#include <fost/insert>
 #include <fost/connection.hpp>
 #include <boost/asio/ssl.hpp>
 #include <boost/lambda/bind.hpp>
-
-#include <fost/exception/unexpected_eof.hpp>
 
 
 using namespace fostlib;
@@ -27,6 +26,9 @@ namespace {
     setting< int64_t > c_read_timeout(
         "fost-internet/Cpp/fost-inet/connection.cpp",
         "Network settings", "Read time out", 30, true);
+    setting< int64_t > c_large_read_chunk_size(
+        "fost-internet/Cpp/fost-inet/connection.cpp",
+        "Network settings", "Large read chunk size", 1024, true);
     setting< json > c_socks_version(
         "fost-internet/Cpp/fost-inet/connection.cpp",
         "Network settings", "Socks version", json(), true);
@@ -317,24 +319,21 @@ network_connection &fostlib::network_connection::operator >> ( std::string &s ) 
         m_input_buffer.sbumpc(); m_input_buffer.sbumpc();
     } else
         throw fostlib::exceptions::unexpected_eof(
-            "Could not find a \\r\\n sequence before network connection ended"
-        );
+            "Could not find a \\r\\n sequence before network connection ended");
     return *this;
 }
 network_connection &fostlib::network_connection::operator >> (
-    std::vector< utf8 > &v
-) {
-    read(
-        *m_socket, m_ssl_data, m_input_buffer,
-        boost::asio::transfer_at_least(v.size() - m_input_buffer.size())
-    );
+        std::vector< utf8 > &v) {
+    const std::size_t chunk = coerce<std::size_t>(c_large_read_chunk_size.value());
+    while( v.size() - m_input_buffer.size()
+            && read(*m_socket, m_ssl_data, m_input_buffer,
+                boost::asio::transfer_at_least(
+                    std::min(v.size() - m_input_buffer.size(), chunk))) );
     if ( m_input_buffer.size() < v.size() ) {
         fostlib::exceptions::unexpected_eof exception(
-            "Could not read all of the requested bytes from the network connection"
-        );
-        exception.info()
-            << "Read " << m_input_buffer.size()
-            << " bytes out of " << v.size() << std::endl;
+            "Could not read all of the requested bytes from the network connection");
+        insert(exception.data(), "bytes read", coerce<int64_t>(m_input_buffer.size()));
+        insert(exception.data(), "bytes expected", coerce<int64_t>(v.size()));
         throw exception;
     }
     for ( std::size_t p = 0; p <  v.size(); ++p )
